# lumina

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: GenerateConfig.cmake
data/shaders/: cluster_cull.comp  cluster_cull.slang  common.slang  compact_drawcalls.comp  cull.comp  cull_ortho.comp  depth_downsample_singlepass.comp  depth_downsample_singlepass.slang  depthreduce.comp  depthreduce.slang  gamma.frag  generate_drawcalls.slang  generate_indirect_arguments.comp  gpu_scene.glsl  gpu_scene.slang  imgui.frag  imgui.vert  instance_cull.comp  instance_cull.slang  normal_encoding.glsl  prefix_scan_add_partial.comp  prefix_scan_add_partial.slang  prefix_scan_index.comp  prefix_scan_index.slang  prefix_scan_index_u8.slang  rng.slang  skinning.comp  tonemap.frag  vertex_format.glsl
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  array_proxy.cppm  handle.cppm  hash.cppm  iterable_proxy.cppm  job.cppm  log.cppm  mod.cppm  object_pool.cppm  refcounted.cppm  type_hash.cppm  type_traits.cppm  typesafe_flags.cppm
modules/core/config/: mod.cppm.in
modules/core/math/: aabb.cppm  atomic.cppm  intersect_test.cppm  matrix.cppm  mod.cppm  plane.cppm  quaternion.cppm  transform.cppm  util.cppm  vector.cppm
modules/ecs/: CMakeLists.txt  entity.cppm  mod.cppm  pool.cppm  realm.cppm  sparse_set.cppm  view.cppm
modules/physics/: CMakeLists.txt  mod.cppm  rigidbody_interface.cppm
modules/physics/broadphase/: broadphase_interface.cppm  bvh4_node.cppm  bvh4_tree.cppm
modules/physics/collision/: gjk.cppm  mod.cppm  sat.cppm  shape.cppm
modules/physics/collision/shape/: capsule.cppm  convex_hull.cppm  sphere.cppm
modules/platform/: CMakeLists.txt  input.cppm  mod.cppm  window.cppm
modules/renderer/: CMakeLists.txt  animation.cppm  camera.cppm  gpu_scene.cppm  material_registry.cppm  mesh_registry.cppm  mod.cppm  resource_format.cppm  resource_manager.cppm  resource_storage.cppm  texture_registry.cppm
modules/renderer/impl/: resource_manager.cpp
modules/ui/: CMakeLists.txt  device_overlay.cppm  imgui.cppm  mod.cppm
modules/vfs/: CMakeLists.txt  mod.cppm
modules/vulkan/: CMakeLists.txt  buffer.cppm  command_buffer.cppm  context.cppm  descriptor.cppm  device.cppm  dispatch.cpp  image.cppm  mod.cppm  pipeline.cppm  queues.cppm  shader.cppm  wsi.cppm
modules/vulkan/impl/: buffer.cpp  buffer.cppm  command_buffer.cpp  command_buffer.cppm  device.cpp  device.cppm  image.cpp  image.cppm  wsi_glfw3.cpp  wsi_glfw3.cppm
tools/shader_compiler/: CMakeLists.txt  main.cpp
